2023-02-03  Stuart Caie <kyzer@cabextract.org.uk>

	* configure.ac: do AC_CHECK_SIZEOF([off_t]) test only after
	AC_SYS_LARGEFILE, because the latter can alter the size of off_t.

        * cabd_extract(): file->offset and file->length are unsigned ints,
	both of them and their sum are checked to be <= CAB_LENGTHMAX. But
	recent code stuffs file->length into an off_t and checks that instead.
	On 32-bit architectures, if file->length > 2GiB then the off_t is
	negative, evading the check. Ultimately this causes the decompression
	functions to return MSPACK_ERR_ARGS as they already guard against
	being asked to decompress a negative number of bytes.

2023-02-01  Stuart Caie <kyzer@cabextract.org.uk>

	* readbits.h, readhuff.h, cabd.c, kwajd.c, lzxd.c, mszipd.c, qtmd.c:
	ensure bit operations (including intermediary ones) are considered
	as unsigned int, so UBSan is happy.

2023-01-31  Stuart Caie <kyzer@cabextract.org.uk>

	* chmd.c: replace READ_ENCINT() macro with stricter read_encint()
	function that reads no more than 63 or 31 bits so ENCINTs can never
	be negative.

	I'd prefer to use unsigned types, but off_t is used for file offsets
	and lengths to match the environment's file I/O, so changing it is
	tricky and would change the current public API.

	Additionally, UBSan complains about shifting a 1 into a signed
	type's MSB. https://www.cs.utah.edu/~regehr/papers/tosem15.pdf
	notes that this is legal in ANSI C and "fairly benign (and well-
	defined until C99)", but C99 made it undefined for no good reason.
	I don't agree with this, but I don't want someone else using a C99
	compiler to end up miscompiling the code.

	* chmd_read_headers(): the CHM's internally declared file length is
	compared against its actual file length and a warning is printed if
	they don't match.

	* chmd_extract(): files in the uncompressed section will print a
	warning if their declared length goes beyond the declared end of the