@@ -1,3 +1,7 @@
+2023-02-12  Stuart Caie <kyzer@cabextract.org.uk>
+
+	* chmd.c: add a default tolower() if MSPACK_NO_DEFAULT_SYSTEM is set.
+
 2023-02-03  Stuart Caie <kyzer@cabextract.org.uk>
 
 	* configure.ac: do AC_CHECK_SIZEOF([off_t]) test only after
